# COMP371_Assignments

./: .gitignore  CMakeLists.txt  README.md
Assignment1/Part1/: CMakeLists.txt
Assignment1/Part1/src/: main.cpp
Assignment1/Part2/: CMakeLists.txt
Assignment1/Part2/src/: Driver.cpp  Driver.h  Point.cpp  Point.h  Triangle.cpp  Triangle.h  main.cpp
Assignment2/: CMakeLists.txt
Assignment2/src/: Shader.h  main.cpp  shader.cpp
src/: main.cpp  main.h
